// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LcIframe component Client should render title 1`] = `

<div class="lc-iframe">
  <div class="lc-offsets lc-offsets_padding-top_none lc-offsets_padding-bottom_s">
    <div class="lc-text-block lc-text-block_size_s36"
         style="--font-weight:500;--color:initial;--font-family:display;--letter-spacing:normal"
    >
      <div class="lc-styled-text">
        <div class="lc-styled-text__text">
          Iframe title
        </div>
      </div>
    </div>
  </div>
  <iframe src="https://ya.ru"
          name="iframe-id"
          class="lc-iframe__iframe"
          allowfullscreen
          referrerpolicy="origin"
          sandbox="allow-forms allow-scripts allow-top-navigation allow-same-origin allow-presentation"
  >
  </iframe>
</div>

`;

exports[`LcIframe component SSR should not pass src to iframe element when deferIframeRender is true 1`] = `

<div class="lc-iframe"
     data-reactroot
>
  <iframe name="iframe-id"
          class="lc-iframe__iframe"
          allowfullscreen
          referrerpolicy="origin"
          sandbox="allow-forms allow-scripts allow-top-navigation allow-same-origin allow-presentation"
  >
  </iframe>
</div>

`;

exports[`LcIframe component SSR should pass src to iframe element when deferIframeRender is false 1`] = `

<div class="lc-iframe"
     data-reactroot
>
  <iframe src="https://ya.ru"
          name="iframe-id"
          class="lc-iframe__iframe"
          allowfullscreen
          referrerpolicy="origin"
          sandbox="allow-forms allow-scripts allow-top-navigation allow-same-origin allow-presentation"
  >
  </iframe>
</div>

`;
